<resources>
    <string name="app_name">
    </string>
    <string name="logo"></string>

    <string name="SecurityQuestions">MyAndroidApp</string>
    <string name="Question_prompt">Select a Question</string>

    <string-array name="Question_arrays">
        <item>What is your Birth place?</item>
        <item>What is your fav food?</item>
        <item>Which is your Fav color?</item>
    </string-array>

    <string name="FoodBlogger">Food Blogger</string>
    <string name="NormalUser">User</string>
    <string name="Restaurant">Restaurant</string>
    <string name="title_activity_user_navigation"></string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_navigation_foodblogger">navigation_foodblogger</string>


    <string-array name="Type">
        <item>Food Blogger</item>
        <item>User</item>
        <item>Restaurant</item>
    </string-array>

    <string-array name="AvailaibilityWeekday">
        <item>YES</item>
        <item>NO</item>
    </string-array>

    <string-array name="AvailaibilityWeekend">
        <item>YES</item>
        <item>NO</item>
    </string-array>

    <string-array name="Restauranttype">
        <item>Cafe</item>
        <item>pub</item>
        <item>Family Restaurant</item>
        <item>Others</item>
    </string-array>


    <string name="new_to_this_register_here">New to this? Register here</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="log_in">LOG IN</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="trouble_in_logging_in">Trouble in logging in?</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="next">Next</string>
    <string name="title_activity_restaurant_profile">restaurant_profile</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="seating_capacity">Seating Capacity</string>

</resources>

