<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.kanikasharma.meet2eatandroid.LoginActivity"
    android:background="@color/Tomato">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="0dp"
        app:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient_background"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="232dp"
                android:layout_height="162dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/logo"
                app:srcCompat="@drawable/logo"></ImageView>


            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:text="Email Address"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/txt_email"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="0dp"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:text="Password"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/txt_psw"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="0dp"
                android:drawableLeft="@drawable/ic_action_psw"
                android:ems="10"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/txt_forgotpassword"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="240dp"
                android:text="@string/forgot_password"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:background="@drawable/custombuttons"
                android:text="@string/log_in"
                android:textColor="@color/Tomato"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="60dp"
                android:ems="40"
                android:text="@string/new_to_this_register_here"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:id="@+id/txt_registerhere"/>




        </LinearLayout>


    </android.support.v7.widget.CardView>
</LinearLayout>
