<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.kanikasharma.meet2eatandroid.forgotpassword_activity"
    android:background="@color/Tomato">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="0dp"
        app:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient_background">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="309dp"
                    android:layout_height="124dp"
                    android:layout_alignEnd="@+id/txt_email"
                    android:layout_alignParentTop="true"
                    android:layout_alignRight="@+id/txt_email"
                    android:layout_gravity="center"
                    android:layout_marginEnd="9dp"
                    android:layout_marginRight="9dp"
                    android:layout_marginTop="67dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/lock" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/imageView2"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="27dp"
                    android:text="@string/trouble_in_logging_in"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textView"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:text="@string/enter_your_email"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/txt_email"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textView2"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="32dp"
                    android:ems="10"
                    android:hint="Email address"
                    android:inputType="textPersonName" />

                <Button
                    android:id="@+id/btn_next"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_alignEnd="@+id/txt_email"
                    android:layout_alignRight="@+id/txt_email"
                    android:layout_below="@+id/txt_email"
                    android:layout_marginTop="43dp"
                    android:background="@drawable/custombuttons"
                    android:text="@string/next"
                    android:textColor="@color/Tomato" />

            </RelativeLayout>


        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>
